ODP-4329 Initial ODP changes for Clickhouse JDBC inclusion on JDK11